# cencad-fastapi

./: .coverage  .dockerignore  .env  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  COMMANDS.MD  Dockerfile  README.md  ZZZCOMMANDS.MD  app.yaml  cencad  cencad.pub  check_licenses.py  courses-2025-11-10.json  credentials.md  debug_conversion.py  debug_server.py  docker-compose.yml  extract_openapi_schedules.py  gh_action_key  gh_action_key.pub  inspect_schedules.py  makefile  mypy.ini  openapi.json  openapi_auth.json  openapi_certifications.json  openapi_courses.json  openapi_enrollments.json  openapi_schedules.json  openapi_users.json  openapi_vendors.json  pyproject.toml  reproduce_error.py  reproduce_schedule_error.py  requirements.txt  ruff.toml  test_manual_license.py  (+2 more)
.agent/rules/: instructions.md
.github/: instructions.md
.github/workflows/: deploy.yml  tests.yml
app/: __init__.py  main.py
app/api/v1/routers/: __init__.py  analytics.py  assignments.py  auth.py  certifications.py  contact_forms.py  corporate.py  course_categories.py  courses.py  enrollments.py  job_roles.py  payments.py  ping.py  protected.py  schedules.py  submissions.py  users.py  vendors.py
app/api/v1/schemas/: auth_dto.py  certification_dto.py  contact_form_dto.py  course_category_dto.py  course_dto.py  enrollment_dto.py  job_role_dto.py  schedule_dto.py  user_dto.py  vendor_dto.py
app/core/: config.py  dependencies.py  email_service.py  security.py
app/db/: __init__.py  certification_repository.py  contact_form_repository.py  corporate_repository.py  course_category_repository.py  course_repository.py  enrollment_repository.py  job_role_repository.py  mongo.py  repository.py  schedule_repository.py  vendor_repository.py
app/domain/: __init__.py
app/domain/certifications/: certification.py
app/domain/contact_forms/: contact_form.py  value_objects.py
app/domain/corporate/: models.py  schemas.py
app/domain/course_categories/: __init__.py  category.py
app/domain/courses/: __init__.py  course.py
app/domain/enrollments/: enrollment.py
app/domain/job_roles/: __init__.py  job_role.py
app/domain/schedules/: schedule.py
app/domain/users/: __init__.py  user.py  value_objects.py
app/domain/vendors/: __init__.py  vendor.py
docs/: deployment.md  wiki.md
scripts/: add_admin.py  add_categories.py  add_courses.py  add_job_roles.py  add_vendors.py  export_openapi.py  seed_db.py  test_get_schedules.py  verify_access_control.py
seed/: certifications.json  contact_forms.json  course_categories.json  courses.json  enrollments.json  job_roles.json  schedules.json  users.json  vendors.json
tests/: conftest.py
tests/api/: test_assignments.py  test_auth.py  test_auth_profile.py  test_certifications.py  test_contact_forms.py  test_corporate.py  test_course_categories.py  test_courses.py  test_enrollments.py  test_job_roles.py  test_payments.py  test_ping.py  test_schedules.py  test_submissions.py  test_users.py  test_vendors.py
